--- a/package.json
+++ b/package.json
@@ -1,16 +1,13 @@
 {
   "name": "the-x-place",
   "private": true,
-  "homepage": "http://4n1bedoshvili.github.io/TheXPlace-react",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@fontsource/space-grotesk": "^5.0.18",
